# pyxis-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
apps/chat-demo/: README.md
apps/chat-demo/backend/: .env.example  app.py  (+1 more)
apps/mcp-demo/: README.md
apps/mcp-demo/backend/: .env.example  app.py  mcp_http_server.py  mcp_server.py  pyproject.toml
docs/: comparison.md  index.md  langfuse.md  对比.md
docs/_hooks/: gen_api.py  gen_cookbook.py  gen_specs.py
docs/assets/: custom.css
docs/concepts/: flow.md  hooks.md  human.md  index.md  interrupt.md  mcp.md  observability.md  philosophy.md  step.md  tool.md
docs/cookbook/: interrupt.md  mcp.md  observability.md  testing.md
docs/demos/: chat-demo.md  index.md  mcp-demo.md
examples/: _mcp_demo_server.py  agent_tool_use.py  batch_extraction.py  coding_harness.py  evals.py  evals_with_trace.py  guardrails.py  human_review.py  interrupt_review.py  mcp_tool_use.py  memory_kv.py  multi_agent.py  plan_then_execute.py  rag_minimal.py  reflect_and_revise.py  research.py  router_dispatch.py  streaming_demo.py  with_langfuse.py
specs/: 001-step.md  002-flow.md  003-tool.md  004-async.md  005-observability.md  006-中文化.md  007-tool-装饰器.md  008-providers-and-jsonl.md  009-错误可见性.md  010-流式输出.md  011-hook.md  012-human-in-the-loop.md  013-mcp.md  014-文档站.md  015-文档口吻与可观测性重定位.md  016-文档与仓库的映射一致性.md  017-docs-第二轮编辑打磨.md  018-demos-页口吻回调.md  019-去翻译腔.md  020-全站口吻扫盘.md  021-cookbook-热词覆盖.md  022-examples-口吻回调+热词补齐.md  023-公共面收敛.md  README.md
src/pyxis/: __init__.py  client.py  flow.py  hooks.py  human.py  interrupt.py  mcp.py  providers.py  step.py  tool.py  trace.py
tests/: test_async.py  test_error_visibility.py  test_flow.py  test_hooks.py  test_human_in_the_loop.py  test_interrupt.py  test_jsonl.py  test_language_policy.py  test_mcp.py  test_observability.py  test_providers.py  test_step.py  test_streaming.py  test_tool.py  test_tool_decorator.py
tests/integration/: test_openrouter_smoke.py
(+23 files in other folders)
