[project]
name = "pyxis-agent"
version = "1.0.0"
description = "Declarative chain-of-thought agent framework: code as prompt, schema as workflow."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.7",
    "instructor>=1.6",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # 行长交给 formatter 处理
    "RUF001", # 字符串里的全角标点——中文项目就是要全角
    "RUF002", # docstring 里的全角标点——同上
    "RUF003", # 注释里的全角标点——同上
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["pyxis"]
mypy_path = "src"
